# edgar-rag

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
scripts/: bootstrap_aws.py  eval.py  seed.py
src/edgar_rag/: __init__.py  config.py  models.py
src/edgar_rag/embeddings/: __init__.py  base.py  hashing.py  local.py
src/edgar_rag/eval/: README.md  __init__.py  dataset.py  harness.py  metrics.py
src/edgar_rag/eval/data/: eval_dataset.json
src/edgar_rag/ingestion/: chunker.py  messages.py  parser.py
src/edgar_rag/query/: __init__.py  service.py
src/edgar_rag/search/: README.md  __init__.py  opensearch.py
tests/: test_chunker.py  test_embeddings.py  test_embeddings_local.py  test_eval_integration.py  test_message_validation.py  test_metrics.py  test_opensearch.py  test_opensearch_integration.py  test_parser.py  test_query.py  test_query_integration.py
