[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-rag"
version = "0.1.0"
description = "A runnable, event-driven RAG ingestion pipeline over public SEC EDGAR filings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Hernandez" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "boto3>=1.34",
    "opensearch-py>=2.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "tiktoken>=0.7",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]

[project.optional-dependencies]
# Default local embeddings (no cloud credentials needed).
local = ["sentence-transformers>=2.6"]
# Real Claude via the Anthropic API.
anthropic = ["anthropic>=0.25"]
dev = ["pytest>=8.0", "ruff>=0.4", "locust>=2.24", "pre-commit>=3.5"]

[project.scripts]
edgar-rag-worker = "edgar_rag.ingestion.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
